* [#134] Fixed broken sign in links in 'Support' page

--- a/hs_core/templates/pages/help.html
+++ b/hs_core/templates/pages/help.html
@@ -101,7 +101,7 @@
                             <div id="faq-cat-2-sub-2" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Create Resource" in the navigation bar at the top of the page.</li>
                                         <li>Choose data files stored on your local computer to add to your resource. Add or delete rows as necessary using the "Add a Row" or "Delete" buttons.</li>
                                         <li>Select your resource type from the dropdown menu.</li>
@@ -123,7 +123,7 @@
                             <div id="faq-cat-2-sub-3" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "My Resources" in the navigation bar at the top of the page.</li>
                                         <li>Use the search bar to find the resource that you would like to modify.</li>
                                         <li>Select "Editable by me" to filter the search results to only show resources that you have permission to edit.</li>
@@ -150,7 +150,7 @@
                             <div id="faq-cat-2-sub-4" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "My Resources" in the navigation bar at the top of the page.</li>
                                         <li>Use the search bar to find the resource that you would like to rate or comment on.</li>
 
@@ -188,7 +188,7 @@
                             <div id="faq-cat-2-sub-6" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Collaborate" in the navigation bar at the top of the page.</li>
                                         <li><strong>Create a group</strong> by clicking the green button labeled "+ Create a group" on the top left side of the page.</li>
 
@@ -208,7 +208,7 @@
                             <div id="faq-cat-2-sub-7" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Collaborate" in the navigation bar at the top of the page.</li>
                                         <li><strong>Filter or search</strong> for a group by typing in keywords in the text box labeled "search keywords" and click the blue "Search groups" button.</li>
                                     </ol>
@@ -227,7 +227,7 @@
                             <div id="faq-cat-2-sub-8" class="panel-collapse collapse">
                                 <div class="panel-body">
                                     <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Collaborate" in the navigation bar at the top of the page.</li>
                                         <li>Find the group you would like to join and/or comment on using the search method outlined above.</li>
                                         <li><strong>Join or comment on a group</strong> by selecting a group from your search results.</li>
@@ -248,7 +248,7 @@
                             <div id="faq-cat-2-sub-9" class="panel-collapse collapse">
                                 <div class="panel-body">
                                      <ol>
-                                        <li><a href="sign in page">Sign in</a> to HydroShare.</li>
+                                        <li><a href="{% url 'login' %}">Sign in</a> to HydroShare.</li>
                                         <li>Click on "Collaborate" in the navigation bar at the top of the page.</li>
                                         <li>Select "Groups I own" under the "Show" menu on the left. Search may used to filter further if necessary.</li>
                                         <li><strong>Edit or delete a group</strong> by selecting one of your groups from these search results.</li>
