--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -845,12 +845,19 @@ table.table-plain {
 
 .panel-tabs > .nav-tabs > li > a{
     color:#555;
+    -webkit-border-radius: 4px 4px 0 0;
+    -moz-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
 }
 .tab-elements > .tabs-body{
     border: 1px solid #ddd;
     min-height: 300px;
     padding: 10px;
     overflow: auto;
+}
+
+.panel-tabs table>tbody>tr>th{
+    border:0;
 }
 
 .division-title{
@@ -957,9 +964,9 @@ body > .container{
     background-color: #f6f6f6;
     padding: 1px 10px;
     border: 1px solid #dddddd;
-    -webkit-border-radius: 100px;
-    -moz-border-radius: 100px;
-    border-radius: 100px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    border-radius: 15px;
     -webkit-box-shadow: inset 0 1px 0 #ffffff;
     -moz-box-shadow: inset 0 1px 0 #ffffff;
     box-shadow: inset 0 1px 0 #ffffff;
